# Test_Automation_for_DQE_Frameworks

./: .gitignore  README.md  pyproject.toml  run_tests.sh
libraries/: DatabaseLibrary.py
output/: log.html  output.xml  report.html
resources/: db.cfg
tests/: CountTests.robot  MinValueNumbersTests.robot
